Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32046

Spider test instability caused by ER_NET_READ_ERROR

    XMLWordPrintable

Details

    Description

      Setting it to critical because it pollutes CI and local mtr output. Might be similar to MDEV-31586

      For example: https://buildbot.mariadb.org/#/builders/35/builds/27272

      ^ this failure is at a custom branch (bb-11.2-ycp-mdev-28856). First we need to verify that it reprod on a main version.

      spider/bugfix.mdev_27240                 w6 [ fail ]
              Test ended at 2023-08-30 08:48:28
       
      CURRENT_TEST: spider/bugfix.mdev_27240
      mysqltest: At line 18: query 'LOCK TABLE tbl_a READ' failed with wrong errno ER_NET_READ_ERROR (1158): 'Got an error reading communication packets', instead of ER_CONNECT_TO_FOREIGN_DATA_SOURCE (1429)...
       
      The result from queries just before the failure was:
      for master_1
      for child2
      for child3
      CREATE DATABASE auto_test_local;
      USE auto_test_local;
      CREATE TABLE tbl_a (a INT KEY) ENGINE=SPIDER;
      SELECT a.z FROM tbl_a AS a,tbl_a b WHERE a.z=b.z;
      ERROR 42S22: Unknown column 'a.z' in 'field list'
      ALTER TABLE tbl_a CHANGE c c INT;
      ERROR 42S22: Unknown column 'c' in 'tbl_a'
      LOCK TABLE tbl_a READ;
      

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              ycp Yuchen Pei
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Time Spent - 3h 59m Remaining Estimate - 1d
                  1d
                  Logged:
                  Time Spent - 3h 59m Remaining Estimate - 1d
                  3h 59m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.